--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     url: ${spring.datasource.url}
     out-of-order: true
     ignore-migration-patterns: '*:ignored'
-    default-schema: carrental
-    #schemas: carrental
+    #default-schema: carrental
+    schemas: carrental
   datasource:
     hikari:
       jdbc-url: "jdbc:postgresql://localhost:5432/CarRental"
@@ -48,4 +48,4 @@ server:
 
 jwt:
   secret: qwepuisdhfaksdjflsdfn12321___**
-  expiration: 60000
+  expiration: 600000
