--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,6 +21,7 @@
         <swagger.version>2.9.2</swagger.version>
         <spring-boot-starter-validation.version>2.3.12.RELEASE</spring-boot-starter-validation.version>
         <postgresql.version>42.4.1</postgresql.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
@@ -114,6 +115,18 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
 
         <dependency>
