--- a/api/src/main/resources/log4j.properties
+++ b/api/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=fileinfo, fileall, stdout
+log4j.rootLogger=fileinfo, fileall
 # Direct log messages to a log fileinfo
 log4j.appender.fileinfo=org.apache.log4j.RollingFileAppender
 log4j.appender.fileinfo.File=C:/Users/A S U S/Desktop/LogCarRental/logging-info.log
@@ -15,9 +15,3 @@ log4j.appender.fileall.MaxBackupIndex=5
 log4j.appender.fileall.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileall.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.fileall.Threshold=ALL
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-log4j.appender.stdout.Threshold=DEBUG
