--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
     default-encoding: UTF-8
     host: smtp.gmail.com
     username: rusakkate100@gmail.com
-    password: vtratpxdirjncgmk
+    password:
     port: 587
     properties:
       mail:
