--- a/common/src/main/resources/application.properties
+++ b/common/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=rusakkate100@gmail.com
-spring.mail.password=vtratpxdirjncgmk
+spring.mail.password=
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
