--- a/api/pom.xml
+++ b/api/pom.xml
@@ -22,6 +22,7 @@
         <spring-boot-starter-validation.version>2.3.12.RELEASE</spring-boot-starter-validation.version>
         <postgresql.version>42.4.1</postgresql.version>
         <log4j.version>1.2.17</log4j.version>
+        <spring-boot-starter-test.version>2.5.14</spring-boot-starter-test.version>
     </properties>
 
     <dependencies>
@@ -139,6 +140,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-starter-test.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
